# OpenMER

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  mkdocs_preamble.py  setup.cfg  setup.py  sitemap.xml
CereStimGUI/: CereStimGUI.pro
CereStimGUI/matlab/: CereStim DBS.prj  cerestim96.m  cerestim_dbs.mlapp  cerestim_dbs.prj  stimmex.mexw32  stimmex.mexw64  test.m
CereStimGUI/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
DBSGUI/: CommentGUI.py  DBSGUI.py  DBSGUI_old.py  DDUGUI.py  FeaturesGUI.py  LSL_Depth_GUI.py  NS5_OfflinePlayback.py  NSP_DB_Process.py  README.md  RasterGUI.py  SettingsDialog.py  SweepGUI.py  Test_Debug.py  WaveformGUI.py  cbsdkConnection.py  custom.py  scratch.py  tests.py
DBSGUI/dbsgui/my_models/: _shared.py  cbsdkConnection.py
DBSGUI/dbsgui/my_widgets/: cbsdk_connect.py  custom.py
DBSGUI/feature_plots/: FeaturePlotWidgets.py  __init__.py
DDUDisplay/: DDUDisplay.py
PlotDBSTrack/: DBSPlot_GUI.py  brpylib.py  filterbank.py  parallel.py  parpac.py  plot_dbs_track.py  process.py  utilities.py
PlotDBSTrack/tests/: __init__.py  test_bar.py  test_load.py
PlotDBSTrack/widgets/: bar_widget.py  image_properties.py  plots_widget.py
QtSerialPort/: README.md
QtSerialPort/QtSerialPort/: SerialPort.pro  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui
QtSerialPort/build-SerialPort-Desktop_Qt_5_6_0_MSVC2015_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
QtSerialPort/build-SerialPort-Desktop_Qt_5_6_0_MSVC2015_32bit-Debug/debug/: SerialPort.ilk  moc_mainwindow.cpp
docs/: README.md  for-developers.md  getting-started.md  introduction.md  preparing-distribution.md  settings.md  troubleshooting.md  usage-instructions.md
for-developers/: index.html
getting-started/: index.html
introduction/: index.html
neuroport_dbs/: CommentsGUI.py  DDUGUI.py  DepthGUI.py  FeaturesGUI.py  FeaturesGUI_old.py  ImportNS5FeaturesGUI.py  MappingGUI.py  ProcessGUI.py  RasterGUI.py  SettingsDialog.py  SweepGUI.py  WaveformGUI.py  dummy.py  test_pg_memory_leak.py
neuroport_dbs/data_source/: __init__.py  cerebus.py
neuroport_dbs/dbsgui/: comments.py  depth.py  features.py  mapping.py  process.py  raster.py  sweep.py
neuroport_dbs/depth_source/: base.py  cerebus.py  fhc.py
neuroport_dbs/feature_plots/: FeaturePlotWidgets.py  __init__.py
neuroport_dbs/scripts/: CommentsGUI.py  DepthGUI.py  FeaturesGUI.py  FeaturesGUI_old.py  ImportNS5FeaturesGUI.py  MappingGUI.py  ProcessGUI.py  RasterGUI.py  SweepGUI.py  WaveformGUI.py
neuroport_dbs/settings/: __init__.py  defaults.py
open_mer/data_source/: cerebus.py  interface.py  lsl.py
open_mer/dbsgui/: comments.py  depth.py  features.py  mapping.py  procedure.py  process.py  raster.py  sweep.py  waveform.py
open_mer/depth_source/: __init__.py  base.py  cerebus.py  fhc.py
open_mer/feature_plots/: FeaturePlotWidgets.py
open_mer/scripts/: CommentsGUI.py  DepthGUI.py  Depth_Process.py  FeaturesGUI.py  FeaturesGUI_old.py  Features_Process.py  ImportNS5FeaturesGUI.py  MappingGUI.py  ProcedureGUI.py  ProcessGUI.py  RasterGUI.py  ResetUserSettings.py  SweepGUI.py  WaveformGUI.py
open_mer/settings/: __init__.py  defaults.py  reset.py
pyqtgraph_test/: DBSGUI.py  GraphicsLayout.py  cerelink.py
requirements/: linux_environment.yml
scripts/: MonitorZeroMQ.py  scratch.py  test_pg_memory_leak.py
search/: search_index.json
sendMessage/: README.md  SerialPort.pro  SerialPort.pro.user.db27d4f  main.cpp  mainwindow.cpp  mainwindow.h
troubleshooting/: index.html
usage-instructions/: index.html
(+38 files in other folders)
