[metadata]
name = neuroport_dbs
version = attr: neuroport_dbs.__version__
author = Chadwick Boulay
author_email = chboulay@ohri.ca
description = Tools for clinical research using Blackrock Neuroport in DBS MER
long_description = file: docs/README.md
long_description_content_type = text/markdown
url = https://github.com/SachsLab/NeuroportDBS
project_urls =
    Bug Tracker = https://github.com/SachsLab/NeuroportDBS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    numpy
    pyserial
    pyside6
    qtpy
    scipy
    pyqtgraph
    pyfftw
    mysqlclient
    django
    quantities
    neo @ git+https://github.com/NeuralEnsemble/python-neo.git
    pylsl
    pytf @ git+https://github.com/SachsLab/pytf.git
    mspacman @ git+https://github.com/SachsLab/mspacman.git
    serf @ git+https://github.com/cboulay/SERF.git#subdirectory=python

[options.packages.find]
exclude =
    tests
    scripts
    site
    docs

[options.package_data]
"neuroport_dbs/resources/icons" = "*.png"
"neuroport_dbs/resources/config" = "*.ini"

[options.entry_points]  # https://setuptools.pypa.io/en/latest/userguide/entry_point.html
gui_scripts =
    dbs-sweep = neuroport_dbs.scripts.SweepGUI:main
    dbs-waveform = neuroport_dbs.scripts.WaveformGUI:main
    dbs-raster = neuroport_dbs.scripts.RasterGUI:main
    dbs-features = neuroport_dbs.scripts.FeaturesGUI:main
    dbs-mapping = neuroport_dbs.scripts.MappingGUI:main
    dbs-comments = neuroport_dbs.scripts.CommentsGUI:main
    dbs-ddu = neuroport_dbs.scripts.DepthGUI:main
