[metadata]
name = open_mer
version = attr: open_mer.__version__
author = Chadwick Boulay
author_email = chboulay@ohri.ca
description = Tools for deep brain stimulation (DBS) surgery intraoperative mapping with microelectrode recording (MER)
long_description = file: docs/README.md
long_description_content_type = text/markdown
url = https://github.com/SachsLab/OpenMER
project_urls =
    Bug Tracker = https://github.com/SachsLab/OpenMER/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    numpy
    pyserial
    pyside6
    qtpy
    scipy
    pyqtgraph
    pyfftw
    mysqlclient
    django
    pyzmq
    quantities
    neo @ git+https://github.com/NeuralEnsemble/python-neo.git
    pylsl
    pytf @ git+https://github.com/SachsLab/pytf.git
    mspacman @ git+https://github.com/SachsLab/mspacman.git
    serf @ git+https://github.com/cboulay/SERF.git#subdirectory=python

[options.packages.find]
exclude =
    tests
    scripts
    site
    docs

[options.package_data]
"open_mer/resources/icons" = "*.png"
"open_mer/resources/config" = "*.ini"

[options.entry_points]  # https://setuptools.pypa.io/en/latest/userguide/entry_point.html
gui_scripts =
    dbs-sweep = open_mer.scripts.SweepGUI:main
    dbs-waveform = open_mer.scripts.WaveformGUI:main
    dbs-raster = open_mer.scripts.RasterGUI:main
    dbs-process = open_mer.scripts.ProcessGUI:main
    dbs-features = open_mer.scripts.FeaturesGUI:main
    dbs-mapping = open_mer.scripts.MappingGUI:main
    dbs-comments = open_mer.scripts.CommentsGUI:main
    dbs-ddu = open_mer.scripts.DepthGUI:main
